Fix the replacement logic of i18n named placeholders https://bugs.webkit.org/show_bug.cgi?id=306492

Reviewed by Timothy Hatcher.

This fixes placeholder substitution when a named or positional placeholder is immediately preceded by a normal character. The fix now trims the prefix character and only substitutes the actual placeholder token. It also removes the extra + 2 cursor advance in positional replacement so iteration proceeds correctly over the rewritten string.

Test: Tools/TestWebKitAPI/Tests/WebKit/WKWebView/WKWebExtensionAPILocalization.mm

* Source/WebKit/Shared/Extensions/WebExtensionLocalization.cpp:
(WebKit::WebExtensionLocalization::stringByReplacingNamedPlaceholdersInString):
(WebKit::WebExtensionLocalization::stringByReplacingPositionalPlaceholdersInString):
* Tools/TestWebKitAPI/Tests/WebKit/WKWebView/WKWebExtensionAPILocalization.mm:
(TestWebKitAPI::TEST(WKWebExtensionAPILocalization, Placeholders)):

Canonical link: https://commits.webkit.org/311685@main